--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -89,27 +89,30 @@ div#header a {
 #container {
     width:960px;
     margin:0 auto 20px auto;
+    font-size: 16px;
 }
 
 #header {
-    height:76px;
     border-left:1px solid #aaa;
     border-right:1px solid #aaa;
-    background-color: rgb(248,248,248);
-    box-shadow: inset 0 -10px 8px -5px rgba(0,0,0,0.1);
+    background-color: rgb(173,175,175);
+    /*box-shadow: inset 0 -10px 8px -5px rgba(0,0,0,0.1);*/
 }
 
 #logo {
     display:block;
     text-decoration:none;
     outline:none;
-    height: 64px;
-    max-width: 400px;
+    max-width: 60px;
     padding: 5px 0 7px 5px;
 }
+#logo:hover{
+    background-color: #9c9c9c;
+}
+
 #logo img {
     max-height: 66px;
-    max-width: 300px;
+    max-width: 60px;
     height: auto;
     width: auto;
     vertical-align: middle;
@@ -127,8 +130,8 @@ div#header a {
     width:auto;
     max-width:630px;
     margin:10px;
-    background:#eee;
-    border:1px solid #ccc;
+    background-color: rgba(255,255,255, 0.7);
+    border-radius:5px; 
     padding:8px;
     text-align:center;
 }
@@ -454,7 +457,7 @@ table.list {
     margin: 2px 0;
     border-bottom: 1px solid #ccc;
     font-family:arial, helvetica, sans-serif;
-    font-size:10pt;
+    font-size:12pt;
 }
 
 table.list caption {
@@ -915,9 +918,12 @@ ul.tabs {
 }
 
 #response_options ul.tabs {
-    padding-left:190px;
+    padding-left:100px;
 }
-
+#responza-Knowledge-iframe{
+    width: 100%;
+    height:900px;
+}
 
 ul.tabs li {
     margin:0;
@@ -949,7 +955,10 @@ ul.tabs li a {
     background-position:12px 50%;
     background-repeat:no-repeat;
 }
-
+#div{
+    width: 100%;
+    height: 500px;
+}
 ul.tabs li a.active {
     height:18px;
     color:#184E81;
@@ -959,7 +968,11 @@ ul.tabs li a.active {
     border-bottom:none;
     bottom: 0;
 }
-
+#responza-iframe
+{
+    width: 100%;
+    height:900px;
+}
 #response_options > form {
     padding:10px 5px;
     background:#f9f9f9;
@@ -1970,4 +1983,26 @@ table.custom-info td {
 }
 .required {
     font-weight: bold;
+}
+.scp-crm-ul
+{
+    list-style-type:none;
+    margin:0px;
+    line-height: 20px;
+    padding-left: 0px;
+}
+.crm-ul-title
+{
+    display: inline-block;
+    width: 60px;
+    font-weight: bold;
+    font-size: 10pt;
+}
+.scp-clickable-div
+{
+    cursor: pointer;
+    padding: 10px;
+    font-size: 17px;
+    font-weight: bold;
+    background: #aaa;
 }
