--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -112,10 +112,10 @@ div#header a {
 
 #logo img {
     max-height: 66px;
-    max-width: 60px;
+    /*max-width: 60px;*/
     height: auto;
     width: auto;
-    vertical-align: middle;
+    /*vertical-align: middle;*/
     outline: none;
     border: none;
 }
