--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -823,7 +823,6 @@ h2 .reload {
 #threads li a {
     display:inline-block;
     width:auto;
-    height:30px;
     line-height:30px;
     border-top:1px solid #F4FAFF;
     padding:0 10px 0 32px;
@@ -831,11 +830,9 @@ h2 .reload {
 }
 
 #threads li a.active {
-    height:29px;
     background-color:#fff;
-    border:1px solid #aaa;
+    border:2px solid #337ab7;
     border-bottom:none;
-    border-top:2px solid #ed9100;
     font-weight:bold;
 }
 
