--- a/scp/css/dropdown.css
+++ b/scp/css/dropdown.css
@@ -88,46 +88,46 @@
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  color: #777 !important;
   display: inline-block;
-  border: 1px solid #aaa;
+  border: none;
   cursor: pointer;
   font-size: 14px;
   overflow: hidden;
-  background-color: #dddddd;
+  color: #ffffff;
+/*  background-color: #dddddd;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efefef), color-stop(100% #dddddd));
   background-image: -webkit-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -moz-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -ms-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -o-linear-gradient(top, #efefef 0%, #dddddd 100%);
-  background-image: linear-gradient(top, #efefef 0%, #dddddd 100%);
-  padding: 3px 6px;
+  background-image: linear-gradient(top, #efefef 0%, #dddddd 100%);*/
+  padding: 5px 10px;
   text-decoration: none !important;
   line-height:18px;
   margin-left:5px;
 }
 .action-button span,
 .action-button a {
-  color: #777 !important;
+  /*color: #777;*/
   display: inline-block;
   float: left;
 }
 .action-button i.icon-caret-down {
-  background-color: #dddddd;
+/*  background-color: #dddddd;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efefef), color-stop(100% #dddddd));
   background-image: -webkit-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -moz-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -ms-linear-gradient(top, #efefef 0%, #dddddd 100%);
   background-image: -o-linear-gradient(top, #efefef 0%, #dddddd 100%);
-  background-image: linear-gradient(top, #efefef 0%, #dddddd 100%);
+  background-image: linear-gradient(top, #efefef 0%, #dddddd 100%);*/
   height: 18px;
   line-height: 18px;
   margin-right: 0;
   margin-left: 5px;
   padding-left: 5px;
-  border-left: 1px solid #aaa;
+  /*border-left: 1px solid #aaa;*/
 }
 .action-button a {
-  color: #777;
+  color: #fff;
   text-decoration: none;
 }
