--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -447,9 +447,9 @@ a.Icon:hover {
     background:#fff;
 }
 
-#content a:not(.re-icon) {
+/*#content a:not(.re-icon) {
     color:#184E81;
-}
+}*/
 
 #footer {
     clear:both;
@@ -949,7 +949,7 @@ ul.tabs li {
 }
 
 ul.tabs li a {
-    min-width: 200px;
+    min-width: 150px;
     font-weight: bold;
     padding: 5px;
     height: 28px;
@@ -1536,7 +1536,7 @@ time {
     text-align:center;
 }
 
-.dialog input[type="submit"],
+/*.dialog input[type="submit"],
 .dialog input[type="reset"],
 .dialog input[type="button"] {
     display:inline-block;
@@ -1548,7 +1548,7 @@ time {
     padding:0 10px;
     background: url('../images/grey_btn_bg.png?1312910883') top left repeat-x;
     color: #333;
-}
+}*/
 
 .dialog input[type="reset"],
 .dialog input[type="button"] {
@@ -2021,4 +2021,54 @@ table.custom-info td {
     font-size: 17px;
     font-weight: bold;
     background: #aaa;
+}
+.btn-success {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+.btn-success:hover {
+    color: #fff;
+    background-color: #449d44;
+    border-color: #398439;
+}
+.btn-danger {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+.btn-danger:hover {
+    color: #fff;
+    background-color: #c9302c;
+    border-color: #ac2925;
+}
+.btn-info {
+    color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+}
+.btn-info:hover {
+    color: #fff;
+    background-color: #31b0d5;
+    border-color: #269abc;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #2e6da4;
+}
+.btn-primary:hover {
+    color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+}
+.btn-warning {
+    color: #fff;
+    background-color: #f90;
+    border-color:#f0ad4e ;
+}
+.btn-warning:hover {
+    color: #fff;
+    background-color: #ec971f;
+    border-color: #eea236;
 }
