--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -2074,8 +2074,8 @@ table.custom-info td {
 }
 .btn-default {
     color: #333 !important;
-    background-color: #fff !important;
-    border: solid 1px #ddd;
+    background-color: #ddd !important;
+    border: solid 1px #ccc;
 }
 .btn-default:hover {
     color: #333;
